--- a/.taskrc
+++ b/.taskrc
@@ -17,6 +17,7 @@ include dark-green-256.theme
 #include solarized-light-256.theme
 #include no-color.theme
 
+#color.project.SEV=black on red 
 color.blocked=black on gray10
 color.blocking=black on yellow
 
@@ -31,6 +32,7 @@ urgency.uda.project.Validator.coefficient=5.0
 urgency.uda.project.Retro.coefficient=6.0
 urgency.uda.project.Reliability.coefficient=8.0
 urgency.uda.project.Bugs.coefficient=8.0
+urgency.uda.project.SEV.coefficient=15.0
 urgency.uda.project.Logo Upload.coefficient=10.0
 urgency.uda.project.LevelUp.coefficient=10.0
 urgency.uda.project.MigrationDash.coefficient=10.0
