--- a/.taskrc
+++ b/.taskrc
@@ -1,39 +1,23 @@
+# Taskwarrior program configuration file.
+# For more documentation, see https://taskwarrior.org or try 'man task', 'man task-color',
+# 'man task-sync' or 'man taskrc'
+
 # Files
-data.location=/Users/eanstine/.task
+data.location=/Users/erikanstine/.task
 
-# Color theme (uncomment one to use)
-#include light-16.theme
-#include light-256.theme
-#include dark-16.theme
-#include dark-256.theme
-#include dark-red-256.theme
+news.version=2.6.0
+#data.location=~/.local/share/task
+#hooks.location=~/.config/task/hooks
+
+# UI flags
+summary.all.projects=1
+
+# Colors
 include dark-green-256.theme
-#include dark-blue-256.theme
-#include dark-violets-256.theme
-#include dark-yellow-green.theme
-#include dark-gray-256.theme
-#include dark-gray-blue-256.theme
-#include solarized-dark-256.theme
-#include solarized-light-256.theme
-#include no-color.theme
 
-#color.project.SEV=black on red 
 color.blocked=black on gray10
 color.blocking=black on yellow
 
-news.version=2.6.0
-
-urgency.uda.project.SEV-1039.coefficient=10.0
-urgency.uda.project.SS Secrets.coefficient=8.0
-urgency.uda.project.Self Serve Beta.coefficient=10.0
-urgency.uda.project.Interview Loop.coefficient=5.0
-urgency.uda.project.Plaid Misc.coefficient=3.0
-urgency.uda.project.Validator.coefficient=5.0
-urgency.uda.project.Retro.coefficient=6.0
-urgency.uda.project.Reliability.coefficient=8.0
-urgency.uda.project.Bugs.coefficient=8.0
-urgency.uda.project.SEV.coefficient=15.0
-urgency.uda.project.Logo Upload.coefficient=10.0
-urgency.uda.project.LevelUp.coefficient=10.0
-urgency.uda.project.MigrationDash.coefficient=10.0
-urgency.uda.tag.In Review.coefficient=-10.0
+# Urgency Coefficients
+#urgency.project.<projName>.coefficient=1.0
+#urgency.user.tag.<tagName>.coefficient=1.0
